# advent-of-code-2025

./: pyproject.toml
day01/: input3.txt  main.py
day02/: main.py
day03/: main.py  part2.py
day04/: main.py
day05/: example2.txt  main.py
day06/: main.py
day07/: main.py
day08/: main.py
day09/: main.py
day10/: example2.txt  main.py
day11/: main.py
