[project]
name = "advent-of-code-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "ty>=0.0.11",
]

[tool.ruff]
line-length = 100
[tool.ruff.format]
quote-style = "single"
